==> Ai-Thinker-Open/Ai-Thinker-WB2/tools/offline_flash_tool/bl_serial_program_origin/bootrom_isp.c <==
#include "bflb_platform.h"
#include "hal_uart.h"
#include "hal_dma.h"
#include "hal_gpio.h"
#include "hal_flash.h"
#include "bootrom_cmd.h"
#include "bootrom_isp.h"
#include <FreeRTOS.h>
#include "semphr.h"
#include "shell.h"
#include "ff.h"
#include "bl616_para.h"

static int bootrom_isp_send_internal(uint32_t len, uint32_t timeout_ms)
{
    int ret = 0;
    uart_recv_ops = 0;
    memset(uart_recv_buffer, 0, 128);
    device_set_callback(isp_uart, isp_uart_irq_callback);
    csi_dcache_clean_range((uint32_t *)uart_send_buffer, len);
    device_write(isp_uart, 0, uart_send_buffer, len);

    if (xSemaphoreTake(sem_dma_tx, timeout_ms) == pdFALSE) {
        MSG("send timeout\r\n");
        ret = ISP_UART_DMA_TIMEOUT;
        goto errorout;
    }
    if (xSemaphoreTake(sem_uart_rx, timeout_ms) == pdFALSE) {
        MSG("rx timeout\r\n");
        ret = ISP_UART_RX_TIMEOUT;
        goto errorout;
    }

    if (uart_recv_buffer[0] == 'O' && uart_recv_buffer[1] == 'K') {
        ret = 0;
    } else {
        ret = ISP_UART_RX_FAIL;
    }
errorout:
    bflb_platform_dump(uart_recv_buffer, uart_recv_ops);
    device_set_callback(isp_uart, NULL);
    return ret;
}

void dtr_pin_set(uint8_t status)
{
    gpio_write(UART_DTR_PIN, status);
}

void rts_pin_set(uint8_t status)
{
    gpio_write(UART_RTS_PIN, status);
}

void bootrom_isp_enter(void)
{
    gpio_set_mode(UART_RTS_PIN, GPIO_OUTPUT_MODE);
    gpio_set_mode(UART_DTR_PIN, GPIO_OUTPUT_MODE);

    dtr_pin_set(1);
    vTaskDelay(50);
    rts_pin_set(1);
    vTaskDelay(50);
    rts_pin_set(0);
    vTaskDelay(30);
    rts_pin_set(1);
    vTaskDelay(50);
    gpio_set_mode(UART_RTS_PIN, GPIO_INPUT_MODE);
    vTaskDelay(5);
    gpio_set_mode(UART_DTR_PIN, GPIO_INPUT_MODE);
}

void bootrom_isp_init(void)
{
    bootrom_isp_uart_init();
    bootrom_isp_sem_init();

    xTaskCreate(bootrom_isp_task, (char *)"bootrom_isp", 1024, NULL, configMAX_PRIORITIES - 3, &bootrom_isp_handle);
}
